# Pythia

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-10-pythia-frontend.md
docs/superpowers/specs/: 2026-07-10-pythia-frontend-design.md
libs/pythia-db/: Cargo.toml  pythia.db
libs/pythia-db/migrations/2026-07-04-214532-0000_can_messages/: down.sql
libs/pythia-db/src/: lib.rs  models.rs
libs/pythia-db/src/services/: mod.rs  profiles.rs
pythia-backend/: .dockerignore  Cargo.toml  Dockerfile
pythia-backend/libs/pythia-db/migrations/2026-07-04-214532-0000_can_messages/: up.sql
pythia-backend/libs/pythia-db/src/: lib.rs  models.rs  schema.rs
pythia-backend/libs/pythia-db/src/services/: messages.rs  profiles.rs
pythia-backend/src/: main.rs
pythia-backend/src/controllers/: messages.rs  mod.rs  profiles.rs
pythia-frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
pythia-frontend/src/: index.html  styles.scss
pythia-frontend/src/app/: app.html  app.ts
pythia-frontend/src/app/api/: message-api.service.ts  profile-api.service.ts
pythia-frontend/src/app/components/add-frame-form/: add-frame-form.html  add-frame-form.scss  add-frame-form.ts
pythia-frontend/src/app/components/can-frame-table/: can-frame-table.html  can-frame-table.scss  can-frame-table.ts
pythia-frontend/src/app/components/shell/: shell.html  (+2 more)
pythia-frontend/src/app/models/: can.models.ts
pythia-frontend/src/app/state/: profile.store.ts
pythia-frontend/src/app/utils/: payload.util.ts
src/: main.rs
src/controllers/: mod.rs
(+6 files in other folders)
