[package]
name = "pythia-db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3.2", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
